2006-04-07  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* src/blade_accel.c:
	* src/blade_accel_exa.c:
	* src/image_accel.c:
	* src/trident.h:
	* src/trident_accel.c:
	* src/trident_bank.c:
	* src/trident_dac.c:
	* src/trident_dga.c:
	* src/trident_driver.c:
	* src/trident_i2c.c:
	* src/trident_shadow.c:
	* src/trident_tv.c:
	* src/trident_video.c:
	* src/tridenthelper.c:
	* src/tridentramdac.c:
	* src/tvga_dac.c:
	* src/xp4_accel.c:
	* src/xp4_accel_exa.c:
	* src/xp_accel.c:
	Unlibcwrap.  Bump server version requirement.  Bump to 1.2.0.

2006-04-06  Adam Jackson  <ajax@freedesktop.org>

	* src/trident.h:
	Coverity #500: Size the tridentRegsClock array properly.

2006-03-14  Alan Hourihane  <alanh@fairlite.demon.co.uk>

	* src/blade_accel_exa.c: (BladeExaInit):
	* src/xp4_accel_exa.c: (XP4ExaInit):
	Change virtualX to displayWidth (caught by Eric Anholt)

2006-03-13  Alan Hourihane  <alanh@fairlite.demon.co.uk>

	* src/blade_accel_exa.c: (BladeExaInit):
	* src/trident_driver.c: (TRIDENTPreInit):
	* src/xp4_accel_exa.c: (XP4ExaInit):
	EXA fixups for version 2
	Add missing break statement which confused XP4 & XP5.
	Force 128MB XP5 to 64MB for now.

2006-02-21  Alan Hourihane  <alanh@fairlite.demon.co.uk>

	* man/trident.man:
	* src/Makefile.am:
	* src/blade_accel.c: (BladeXaaInit):
	* src/blade_accel_exa.c: (GetCopyROP), (GetDepth), (PrepareSolid),
	(Solid), (DoneSolid), (PrepareCopy), (Copy), (DoneCopy),
	(CheckComposite), (PrepareComposite), (Composite), (DoneComposite),
	(UploadToScreen), (DownloadFromScreen), (MarkSync),
	(BladeDisableClipping), (WaitMarker), (PrepareAccess),
	(FinishAccess), (BladeSetClippingRectangle),
	(BladeInitializeAccelerator), (BladeExaInit):
	* src/trident.h:
	* src/trident_driver.c: (tridentSetup), (TRIDENTProbe),
	(TRIDENTPreInit), (TRIDENTMapMem), (TRIDENTScreenInit),
	(TRIDENTLeaveVT), (TRIDENTCloseScreen):
	* src/trident_regs.h:
	* src/xp4_accel.c: (XP4InitializeAccelerator), (XP4XaaInit),